<resources>
    <string name="app_name">Weekly Planner</string>
    <string name="login_prompt">Login</string>
    <string name="password_prompt">Password</string>
    <string name="login_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>

    <string name="login_button">Login</string>
    <string name="username_error">Bad Login! — Try again!</string>
    <string name="password_error">Bad Password! — Try again!</string>

    <string name="first_name">First Name</string>
    <string name="first_name_hint">First</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Last</string>
    <string name="phone_number">Phone</string>
    <string name="date_of_birth">Date of Birth</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="day_hint">Day</string>
    <string name="year_hint">Year</string>

    <string name="certificate">Certificate</string>
    <string name="degree">Associate\'s Degree</string>
    <string name="major">Major</string>

    <string-array name="list_certificate">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>

    <string-array name="list_major">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

    <string name="next">Next</string>


</resources>