<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/hFirstName"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/hLastName"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/hFirstName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/firstNamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hFirstName" />

    <TextView
        android:id="@+id/lastNamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLastName" />

    <EditText
        android:id="@+id/hPhoneNumber"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/phoneNumberPrompt"
        app:layout_constraintTop_toBottomOf="@+id/lastNamePrompt"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/phoneNumberPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNamePrompt" />

    <TextView
        android:id="@+id/dateOfBirthPrompt"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/date_of_birth"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberPrompt" />

    <EditText
        android:id="@+id/hDay"
        android:layout_width="83dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/day_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/hMonthSpinner"
        app:layout_constraintTop_toBottomOf="@+id/hPhoneNumber" />

    <Spinner
        android:id="@+id/hMonthSpinner"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:entries="@array/months"
        app:layout_constraintStart_toEndOf="@+id/dateOfBirthPrompt"
        app:layout_constraintTop_toBottomOf="@+id/hPhoneNumber" />

    <EditText
        android:id="@+id/hYear"
        android:layout_width="83dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/hDay"
        app:layout_constraintTop_toBottomOf="@+id/hPhoneNumber" />

    <TextView
        android:id="@+id/certificatePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/certificate"
        app:layout_constraintBottom_toTopOf="@+id/hSwitch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/degreePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/degree"
        app:layout_constraintBottom_toTopOf="@+id/hSwitch"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/hSwitch"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:checked="true"
        android:minHeight="48dp"
        android:textOff="@string/degree"
        android:textOn="@string/certificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hMonthSpinner"
        tools:checked="true" />

    <Spinner
        android:id="@+id/hCertificateSpinner"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:entries="@array/list_certificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hSwitch" />

    <Spinner
        android:id="@+id/hMajorSpinner"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:entries="@array/list_major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hSwitch" />

    <TextView
        android:id="@+id/certPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/certificate"
        app:layout_constraintStart_toStartOf="@+id/hCertificateSpinner"
        app:layout_constraintTop_toBottomOf="@+id/hCertificateSpinner" />

    <TextView
        android:id="@+id/majorPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="128dp"
        android:text="@string/major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hMajorSpinner"
        app:layout_constraintTop_toBottomOf="@+id/hMajorSpinner" />

    <Button
        android:id="@+id/hNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#044907"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>